--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,9 @@
-<p>home works!</p>
+<div class="row">
+    <div class="col-md-4 offset-md-4">
+        <div class="card">
+            <div class="card-body text-center">
+                <p class="card-text"><b>I  am seeking a company where I can efficiently contribute my skills and abilities to the growth of the organization and build my professional career.</b></p>
+            </div>
+        </div>
+    </div>
+</div>
