Added Serive for Contact me

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,7 +14,7 @@
   </ul>
 </nav><br />
 
-<h1 class="diplay-2 text-center "><u><a href="#" style="color: black;">WELCOME TO MY CV</a></u> 😃</h1>
+<h1 class="diplay-2 text-center "><a href="#" style="color: black;">WELCOME TO MY CV</a> 😃</h1>
 <div class="container-fluid">
   <div class="row">
     <div class="col-md-3 offset-5">
