--- a/src/app/contact-me/contact-me.component.html
+++ b/src/app/contact-me/contact-me.component.html
@@ -1,20 +1,20 @@
-<div class="card-deck">
+<div class="card-deck" *ngFor="let p of list">
     <div class="card bg-primary">
         <div class="card-body text-center">
             <h4 class="card-title"><u>Name</u></h4>
-            <p class="card-text"><b>Suraj Kaushik</b></p>
+            <p class="card-text"><b>{{p.name}}</b></p>
         </div>
     </div>
     <div class="card bg-danger">
         <div class="card-body text-center">
             <h4 class="card-title"><u>Contact Number</u></h4>
-            <p class="card-text"><b>7358740550</b></p>
+            <p class="card-text"><b>{{p.phoneNumber}}</b></p>
         </div>
     </div>
     <div class="card bg-warning">
         <div class="card-body text-center">
             <h4 class="card-title"><u>Email Id</u></h4>
-            <p class="card-text"><b>kaushiksuraj1102@gmail.com</b></p>
+            <p class="card-text"><b>{{p.emailId}}</b></p>
         </div>
     </div>
     <div class="card bg-success">
