--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,6 @@
 <div class="row">
     <div class="col-md-4 offset-md-4">
-        <p class="text-center"><b>I am seeking a company where I can efficiently contribute my skills and abilities to
+        <p class="text-center text-justify"><b>I am seeking a company where I can efficiently contribute my skills and abilities to
                 the growth of the organization and build my professional career.</b>
         </p>
     </div>
