--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,7 +8,7 @@
 
   <ul class="navbar-nav ml-auto">
     <li class="nav-item">
-      <a class="nav-link" [routerLink]="['/contact']">Contact Me</a>
+      <a class="nav-link" href="/contact">Contact Me</a>
     </li>
 
   </ul>
