--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,6 +4,12 @@
     <li class="nav-item">
       <a class="nav-link" [routerLink]="['/home']">Home</a>
     </li>
+    <li class="nav-item">
+      <a class="nav-link" [routerLink]="['/education']">Education</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" [routerLink]="['/tskill']">Technical Skills</a>
+    </li>
   </ul>
 
   <ul class="navbar-nav ml-auto">
