--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,32 +2,23 @@
 
   <ul class="navbar-nav">
     <li class="nav-item">
-      <a class="nav-link" [routerLink]="['/home']">Home</a>
+      <a class="nav-link" [routerLink]="['/home']" style="color: cornsilk;"><b>Home</b></a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" [routerLink]="['/education']">Education</a>
+      <a class="nav-link" [routerLink]="['/education']" style="color: cornsilk;"><b>Education</b></a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" [routerLink]="['/tskill']">Technical Skills</a>
+      <a class="nav-link" [routerLink]="['/tskill']" style="color: cornsilk;"><b>Technical Skills</b></a>
     </li>
   </ul>
 
   <ul class="navbar-nav ml-auto">
     <li class="nav-item">
-      <a class="nav-link" href="/contact">Contact Me</a>
+      <a class="nav-link" href="/contact" style="color: cornsilk;"><b>Contact Me</b></a>
     </li>
 
   </ul>
-</nav><br />
-
-<h1 class="diplay-2 text-center "><a href="#" style="color: black;">WELCOME TO MY CV</a> 😃</h1>
-<div class="container-fluid">
-  <div class="row">
-    <div class="col-md-3 offset-5">
-      <img src="../assets/img3.jpg" class="rounded-circle img-fluid" />
-    </div>
-  </div>
-</div>
+</nav><br/>
 <div class="container-fluid"><br>
   <router-outlet></router-outlet>
 </div>
