--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,7 +1,13 @@
 <div class="row">
+    <div class="col-md-3 offset-5">
+        <img src="../assets/img3.jpg" class="rounded-circle img-fluid" />
+    </div>
+</div>
+<br>
+<div class="row">
     <div class="col-md-4 offset-md-4">
-        <p class="text-center text-justify"><b>I am seeking a company where I can efficiently contribute my skills and abilities to
+        <h4 class="text-center text-justify"><b>I am seeking a company where I can efficiently contribute my skills and abilities to
                 the growth of the organization and build my professional career.</b>
-        </p>
+        </h4>
     </div>
 </div>
