--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,7 +14,7 @@
 
   <ul class="navbar-nav ml-auto">
     <li class="nav-item">
-      <a class="nav-link" href="/contact" style="color: cornsilk;"><b>Contact Me</b></a>
+      <a class="nav-link" href="/contact" style="color: cornsilk;"><b>Contact</b></a>
     </li>
 
   </ul>
