--- a/src/app/contact-me/contact-me.component.html
+++ b/src/app/contact-me/contact-me.component.html
@@ -37,27 +37,27 @@
             <table class="table table-hover" *ngFor="let p of list">
                 <tbody>
                 <tr>
-                    <th><b>Name:</b></th>
+                    <th><img src="../../assets/user (2).png"></th>
                     <td style="color: black;"><b>{{p.name}}</b></td>
                 </tr>
                 <tr>
-                    <th><b>Contact Number:</b></th>
+                    <th><img src="../../assets/phone.png"></th>
                     <td style="color: black;"><b>{{p.phoneNumber}}</b></td>
                 </tr>
                 <tr>
-                    <th><b>Email:</b></th>
+                    <th><img src="../../assets/email.png"></th>
                     <td style="color: black;"><b>{{p.emailId}}</b></td>
                 </tr>
                 <tr>
-                    <th><b>LinkedIn:</b></th>
-                    <td><b><a href="{{p.linkedIn}}" target="_blank" style="color: black;">Click here to check my LinkedIn
-                        Profile</a></b></td>
+                    <th><img src="../../assets/linkedin.png"></th>
+                    <td><b><a href="{{p.linkedIn}}" target="_blank" style="color: black;">Click here</a></b></td>
                 </tr>
                 <tr>
-                    <th><b>GitHub:</b></th>
-                    <td><b><a href="{{p.git}}" target="_blank" style="color: black;">Click here to check my Github</a></b></td>
+                    <th><img src="../../assets/github.png"></th>
+                    <td><b><a href="{{p.git}}" target="_blank" style="color: black;">Click here</a></b></td>
                 </tr>
             </tbody>
+            <br>
             </table>
         </div>
     </div>
@@ -65,6 +65,5 @@
 
 <div><br><br>
     <h4 class="text-center"><b>Schedule a 30 min meeting with me</b></h4>
-    <div class="calendly-inline-widget" data-url="https://calendly.com/surajkaushik/30min?primary_color=e7880d"
-        style="min-width:320px;height:630px;"></div>
+    <div class="calendly-inline-widget" data-url="https://calendly.com/surajkaushik/30min?background_color=4d5055&text_color=f3fffd&primary_color=de7e29" style="min-width:320px;height:630px;"></div>
 </div>
