--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,5 @@
 <div class="row">
-    <div class="col-md-3 offset-5">
+    <div class="center">
         <img src="../assets/img3.jpg" class="rounded-circle img-fluid" />
     </div>
 </div>
