Implements tech.Skill component

--- a/src/app/technical-skills/technical-skills.component.html
+++ b/src/app/technical-skills/technical-skills.component.html
@@ -1,1 +1,128 @@
-<p>technical-skills works!</p>
+<div class="techSkill">
+    <div class="cont">
+        <div class="card">
+            <div class="imgBx">
+                <img src="../../assets/angular (2).png">
+            </div>
+            <div class="content">
+                <h4>ANGULAR</h4>
+                <p>The website you are looking at is created with the help of angular framework.</p>
+                <ul class="text-left">
+                    <li>Angular version 10 is used</li>
+                    <li>Angular CLI</li>
+                    <li>Routing</li>
+                    <li>Modules</li>
+                    <li>Components</li>
+                </ul>
+            </div>
+        </div>
+        <div class="card">
+            <div class="imgBx">
+                <img src="../../assets/java.png">
+            </div>
+            <div class="content">
+                <h4>JAVA</h4>
+                <p>The Server (Backend) is coded with the help of Java.</p>
+                <ul class="text-left">
+                    <li>Java 8 is used</li>
+                    <li>Validator</li>
+                    <li>Logging</li>
+                    <li></li>
+                </ul>
+            </div>
+        </div>
+        <div class="card">
+            <div class="imgBx">
+                <img src="../../assets/python1.png">
+            </div>
+            <div class="content">
+                <h4>PYTHON</h4>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Earum dignissimos eius mollitia sequi
+                    itaque omnis impedit voluptas cupiditate aliquid culpa. Amet odio modi dignissimos ab. Magni omnis
+                    incidunt quos harum.</p>
+            </div>
+        </div>
+
+        <div class="card">
+            <div class="imgBx">
+                <img src="../../assets/spring.png">
+            </div>
+            <div class="content">
+                <h4>SPRINGBOOT</h4>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Earum dignissimos eius mollitia sequi
+                    itaque omnis impedit voluptas cupiditate aliquid culpa. Amet odio modi dignissimos ab. Magni omnis
+                    incidunt quos harum.</p>
+            </div>
+        </div>
+
+        <div class="card">
+            <div class="imgBx">
+                <img src="../../assets/sql.png">
+            </div>
+            <div class="content">
+                <h4>SQL</h4>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias quo aperiam architecto,
+                    voluptatibus amet dignissimos! Temporibus reiciendis in, quidem fugiat aspernatur sequi quo,
+                    deleniti facilis veniam, tempora suscipit explicabo. Perferendis.
+                </p>
+            </div>
+        </div>
+
+        <div class="card">
+            <div class="imgBx">
+                <img src="../../assets/ts.png">
+            </div>
+            <div class="content">
+                <h4>TYPESCRIPT</h4>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias quo aperiam architecto,
+                    voluptatibus amet dignissimos! Temporibus reiciendis in, quidem fugiat aspernatur sequi quo,
+                    deleniti facilis veniam, tempora suscipit explicabo. Perferendis.
+                </p>
+            </div>
+        </div>
+
+        <div class="card">
+            <div class="imgBx">
+                <img src="../../assets/html5.png">
+            </div>
+            <div class="content">
+                <h4>HTML 5</h4>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias quo aperiam architecto,
+                    voluptatibus amet dignissimos! Temporibus reiciendis in, quidem fugiat aspernatur sequi quo,
+                    deleniti facilis veniam, tempora suscipit explicabo. Perferendis.
+                </p>
+            </div>
+        </div>
+
+        <div class="card">
+            <div class="imgBx">
+                <img src="../../assets/css.png">
+            </div>
+            <div class="content">
+                <h4>CSS 3</h4>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias quo aperiam architecto,
+                    voluptatibus amet dignissimos! Temporibus reiciendis in, quidem fugiat aspernatur sequi quo,
+                    deleniti facilis veniam, tempora suscipit explicabo. Perferendis.
+                </p>
+            </div>
+        </div>
+
+        <div class="card">
+            <div class="imgBx">
+                <img src="../../assets/bootstrp.png">
+            </div>
+            <div class="content">
+                <h4>BOOTSTRAP</h4>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias quo aperiam architecto,
+                    voluptatibus amet dignissimos! Temporibus reiciendis in, quidem fugiat aspernatur sequi quo,
+                    deleniti facilis veniam, tempora suscipit explicabo. Perferendis.
+                </p>
+            </div>
+        </div>
+    </div>
+</div>
