Added content in tskill component

--- a/src/app/technical-skills/technical-skills.component.html
+++ b/src/app/technical-skills/technical-skills.component.html
@@ -6,9 +6,9 @@
             </div>
             <div class="content">
                 <h4>ANGULAR</h4>
-                <p>The website you are looking at is created with the help of angular framework.</p>
+                <p>The client-side (frontend) of project is created using angular.</p>
                 <ul class="text-left">
-                    <li>Angular version 10 is used</li>
+                    <li>Angular version 10.0.0</li>
                     <li>Angular CLI</li>
                     <li>Routing</li>
                     <li>Modules</li>
@@ -22,12 +22,13 @@
             </div>
             <div class="content">
                 <h4>JAVA</h4>
-                <p>The Server (Backend) is coded with the help of Java.</p>
+                <p>The Server-side (Backend) is coded with the help of Java.</p>
                 <ul class="text-left">
-                    <li>Java 8 is used</li>
+                    <li>Java 8.0.0</li>
                     <li>Validator</li>
                     <li>Logging</li>
-                    <li></li>
+                    <li>OOPS Concepts</li>
+                    <li>Maven</li>
                 </ul>
             </div>
         </div>
@@ -37,9 +38,12 @@
             </div>
             <div class="content">
                 <h4>PYTHON</h4>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Earum dignissimos eius mollitia sequi
-                    itaque omnis impedit voluptas cupiditate aliquid culpa. Amet odio modi dignissimos ab. Magni omnis
-                    incidunt quos harum.</p>
+                <p>Studied and Implemented python 3.6.0 .</p>
+                <ul class="text-left">
+                    <li>OOPS Concepts</li>
+                    <li>Data Type</li>
+                    <li>Data Analysis</li>
+                </ul>
             </div>
         </div>
 
@@ -49,9 +53,15 @@
             </div>
             <div class="content">
                 <h4>SPRINGBOOT</h4>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Earum dignissimos eius mollitia sequi
-                    itaque omnis impedit voluptas cupiditate aliquid culpa. Amet odio modi dignissimos ab. Magni omnis
-                    incidunt quos harum.</p>
+                <p>The Server-side (Backend) is created using springboot.</p>
+                <ul class="text-left">
+                    <li>Spring JPA</li>
+                    <li>Spring Rest</li>
+                    <li>Spring AOP</li>
+                    <li>Spring JDBC</li>
+                    <li>Spring TEST</li>
+                    <li>Spring WEB</li>
+                </ul>
             </div>
         </div>
 
@@ -62,10 +72,16 @@
             <div class="content">
                 <h4>SQL</h4>
                 <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias quo aperiam architecto,
-                    voluptatibus amet dignissimos! Temporibus reiciendis in, quidem fugiat aspernatur sequi quo,
-                    deleniti facilis veniam, tempora suscipit explicabo. Perferendis.
+                    SQL is used here in Server_Side for storing data.
                 </p>
+                <ul class="text-left">
+                    <li>Database</li>
+                    <li>Table</li>
+                    <li>Inserting Rows</li>
+                    <li>Joins</li>
+                    <li>Drop</li>
+                    <li>Commit</li>
+                </ul>
             </div>
         </div>
 
@@ -76,10 +92,11 @@
             <div class="content">
                 <h4>TYPESCRIPT</h4>
                 <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias quo aperiam architecto,
-                    voluptatibus amet dignissimos! Temporibus reiciendis in, quidem fugiat aspernatur sequi quo,
-                    deleniti facilis veniam, tempora suscipit explicabo. Perferendis.
+                    The client-side components are .ts files are coded with the help of Typescript.
+                    Every component have a .ts file for handling data. The service file is also a .ts file.
+                    The model's are also created using .ts file.
                 </p>
+
             </div>
         </div>
 
@@ -90,9 +107,9 @@
             <div class="content">
                 <h4>HTML 5</h4>
                 <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias quo aperiam architecto,
-                    voluptatibus amet dignissimos! Temporibus reiciendis in, quidem fugiat aspernatur sequi quo,
-                    deleniti facilis veniam, tempora suscipit explicabo. Perferendis.
+                    The client-side main part is coded using HTML. The page you see is a HTML page, which is
+                    also called as a view in technical terms. All kind of tags are used for creating these pages.
+
                 </p>
             </div>
         </div>
@@ -104,9 +121,10 @@
             <div class="content">
                 <h4>CSS 3</h4>
                 <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias quo aperiam architecto,
-                    voluptatibus amet dignissimos! Temporibus reiciendis in, quidem fugiat aspernatur sequi quo,
-                    deleniti facilis veniam, tempora suscipit explicabo. Perferendis.
+                    The designing part for the View is done using this language.
+                    Here multiple type of selector like id, class, tag all are used.
+                    Attributes and there properties are used for align , color, padding 
+                    and many more things.
                 </p>
             </div>
         </div>
@@ -118,9 +136,9 @@
             <div class="content">
                 <h4>BOOTSTRAP</h4>
                 <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias quo aperiam architecto,
-                    voluptatibus amet dignissimos! Temporibus reiciendis in, quidem fugiat aspernatur sequi quo,
-                    deleniti facilis veniam, tempora suscipit explicabo. Perferendis.
+                    The other part of designing for the View is done using this language.
+                    This is having predefined class with a particular properties.
+                    We can using then by calling there names in the HTML tags.
                 </p>
             </div>
         </div>
