--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -6,7 +6,7 @@
 <br>
 <div class="row">
     <div class="col-md-4 offset-md-4">
-        <h4 class="text-center text-justify"><b>I am seeking a company where I can efficiently contribute my skills and abilities to
+        <h4 class="text-center text-justify" style="color: azure;"><b>I am seeking a company where I can efficiently contribute my skills and abilities to
                 the growth of the organization and build my professional career.</b>
         </h4>
     </div>
