Created a new componet( Add Education) , Routing .

--- a/src/app/education/education.component.html
+++ b/src/app/education/education.component.html
@@ -23,3 +23,15 @@
         </tbody>
     </table>
 </div>
+
+<div>
+    <button class="btn btn-primary" type="submit" [routerLink]="['/addEdu']">Add Education</button>
+</div>
+
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-md-4 offset-md-6">
+            <router-outlet></router-outlet>
+        </div>
+    </div>
+</div>
