--- a/src/app/education/education.component.html
+++ b/src/app/education/education.component.html
@@ -17,7 +17,7 @@
                 <td style="color: white;"><b>{{e.year}}</b></td>
                 <td style="color: white;"><b>{{e.nameOfIns}}</b></td>
                 <td style="color: white;"><b>{{e.degree}}</b></td>
-                <td style="color: white;"><b>{{e.marks}}</b></td>
+                <td style="color: white;"><b>{{e.marks}}%</b></td>
             </tr>
 
         </tbody>
