Created exp,feedback and Certification comp

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,13 +3,23 @@
   <ul class="navbar-nav">
     <li class="nav-item">
       <a class="nav-link" [routerLink]="['/home']" style="color: cornsilk;"><b>Home</b></a>
-    </li>
+    </li>&nbsp;
     <li class="nav-item">
       <a class="nav-link" [routerLink]="['/education']" style="color: cornsilk;"><b>Education</b></a>
-    </li>
+    </li>&nbsp;
     <li class="nav-item">
-      <a class="nav-link" [routerLink]="['/tskill']" style="color: cornsilk;"><b>Technical Skills</b></a>
-    </li>
+      <a class="nav-link" [routerLink]="['/tskill']" style="color: cornsilk;"><b>Technical
+          Skills</b></a>
+    </li>&nbsp;
+    <li class="nav-item">
+      <a class="nav-link" [routerLink]="['/certification']" style="color: cornsilk;"><b>Certification</b></a>
+    </li>&nbsp;
+    <li class="nav-item">
+      <a class="nav-link" [routerLink]="['/exp']" style="color: cornsilk;"><b>Experience</b></a>
+    </li>&nbsp;
+    <li class="nav-item">
+      <a class="nav-link" [routerLink]="['/feedback']" style="color: cornsilk;"><b>Feedback</b></a>
+    </li>&nbsp;
   </ul>
 
   <ul class="navbar-nav ml-auto">
@@ -18,7 +28,9 @@
     </li>
 
   </ul>
-</nav><br/>
+
+</nav>
+<br>
 <div class="container-fluid"><br>
   <router-outlet></router-outlet>
 </div>
