--- a/src/app/education/add-education/add-education.component.html
+++ b/src/app/education/add-education/add-education.component.html
@@ -3,22 +3,37 @@
         <div class="form-group">
             <label for="educationId">Roll No:</label>
             <input type="text" class="form-control" id="educationId" formControlName="educationId">
+            <span class="text-danger" *ngIf="addEduForm.controls.educationId.invalid && addEduForm.controls.educationId.dirty">
+                Pleasse Enter Roll No.
+            </span>
         </div>
         <div class="form-group">
             <label for="year">Year:</label>
             <input type="text" class="form-control" id="year" formControlName="year">
+            <span class="text-danger" *ngIf="addEduForm.controls.year.invalid && addEduForm.controls.year.dirty">
+                Pleasse Enter year of qualification
+            </span>
         </div>
         <div class="form-group">
             <label for="nameOfIns">Name of Institute:</label>
             <input type="text" class="form-control" id="nameOfIns" formControlName="nameOfIns">
+            <span class="text text-danger" *ngIf="addEduForm.controls.nameOfIns.invalid && addEduForm.controls.nameOfIns.dirty">
+                Pleasse Enter the Name of Institute.
+            </span>
         </div>
         <div class="form-group">
             <label for="degree">Degree:</label>
             <input type="text" class="form-control" id="degree" formControlName="degree">
+            <span class="text-danger" *ngIf="addEduForm.controls.degree.invalid && addEduForm.controls.degree.dirty"> 
+                Pleasse Enter Degree.
+            </span>
         </div>
         <div class="form-group">
             <label for="marks">Marks:</label>
             <input type="text" class="form-control" id="marks" formControlName="marks">
+            <span class="text-danger" *ngIf="addEduForm.controls.marks.invalid && addEduForm.controls.marks.dirty">
+                Pleasse Enter your marks.
+            </span>
         </div>
         <div class="form-group">
             <button class="btn btn-primary" type ="submit" [disabled]="addEduForm.invalid">
@@ -30,6 +45,6 @@
         </div>
     </form>
     <div *ngIf="successMessage"> 
-        <span class="text-success">{{successMessage}}</span>
+        <span class="text">{{successMessage}}</span>
     </div>
 </div>
